--- a/sl_player.html
+++ b/sl_player.html
@@ -14,5 +14,6 @@
 <body>
     <span style="border:solid 1px #888888; margin-bottom: -1px; background-color:#cccccc; padding: 2px; display: inline-block" id="toolbar"></span> <br />
     <canvas id="player" width="395" height="425" style="border:1px solid black; margin-bottom: 0px"></canvas>
+    <param name="problem_src" value="test.txt" />
 </body>
 </html>
