--- a/sl_player.html
+++ b/sl_player.html
@@ -4,6 +4,7 @@
 <head>
     <title>Slitherlink Player</title>
     <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="js/grid_field.js"></script>
     <script type="text/javascript" src="js/sl_controller.js"></script>
     <script type="text/javascript" src="js/sl_field.js"></script>
     <script type="text/javascript" src="js/sl_problem.js"></script>
