Slitherlink: use GridController in SlitherlinkController

--- a/sl_player.html
+++ b/sl_player.html
@@ -5,6 +5,7 @@
     <title>Slitherlink Player</title>
     <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="js/grid_field.js"></script>
+    <script type="text/javascript" src="js/grid_controller.js"></script>
     <script type="text/javascript" src="js/sl_controller.js"></script>
     <script type="text/javascript" src="js/sl_field.js"></script>
     <script type="text/javascript" src="js/sl_problem.js"></script>
