Kakuro: use keypad

--- a/kk_player.html
+++ b/kk_player.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="js/kk_controller.js"></script>
     <script type="text/javascript" src="js/kk_view.js"></script>
     <script type="text/javascript" src="js/kk_application.js"></script>
+    <script type="text/javascript" src="js/numeric_keypad.js"></script>
     <script type="text/javascript" src="js/toolbar.js"></script>
 </head>
 <body>
